Upgrade Enterprise skeleton to Magnolia 6.4.6